# ode_simulator

./: CMakeLists.txt  README.md  dataToFun.sh  package.xml
data/quad2dof/: D.txt  P.txt  U.txt  W.txt  X.txt
include/: CoreTypesLite.h  MatrixLite.h  Symbolic.h
launch/: test_quad2dof.launch
src/: MatrixLite.c  Symbolic.c  ode_simulator_node.cpp  symToODE.c  test_quad2dof_node.cpp
src/quad2dof/: odefun.c  odefun.h
